# simswap

./: .dockerignore  .env.local  .gitignore  .pre-commit-config.yaml  0001-Production-ready.patch  Dockerfile  Makefile  README.md  docker-compose.celery.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.run/: Runserver.run.xml
faceswap/: gunicorn.conf.py  manage.py  wsgi.py
faceswap/api/: apps.py  roop_mock.py  serializers.py  tasks.py  urls.py  utils.py  views.py
faceswap/faceswap/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
faceswap/mainapp/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
faceswap/mainapp/management/commands/: prepare.py  update_gpus.py
faceswap/mainapp/migrations/: 0001_initial.py  0002_image_rename_video_video_video_file_and_more.py  0003_video_show.py  0004_gpu.py  0005_videogenerationcount.py
faceswap/mainapp/static/mainapp/css/: style.css
faceswap/mainapp/static/mainapp/js/: main.js  modal.js
faceswap/mainapp/templates/: competition.html  contest.html  home.html  photo_ready.html  uploading_photos.html
faceswap/roop/: README.md  __init__.py  Текстовый документ.txt
faceswap/roop/roop/: capturer.py  core.py  face_analyser.py  predictor.py  ui.py  utilities.py
faceswap/roop/roop/processors/frame/: core.py  face_enhancer.py  face_swapper.py
faceswap/roop/rooplib/: config.py  core.py  face_analyser.py  face_reference.py  predictor.py  typing.py  utilities.py
faceswap/roop/rooplib/processors/frame/: core.py  face_swapper.py
