[tool.poetry]
name = "faceswap"
version = "0.1.0"
description = ""
authors = ["v.kovalchuk <v.kovalchuk@crysto.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
django = "^5.0.3"
sentry-sdk = {extras = ["django"], version = "^1.40.6"}
django-rest-framework = "^0.1.0"
gunicorn = "^21.2.0"
celery = {extras = ["redis"], version = "^5.3.6"}
pillow = "^10.2.0"
django-cors-headers = "^4.3.1"
orjson = "^3.9.15"
flower = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"


[tool.poetry.group.roop.dependencies]
onnxruntime-gpu = "1.15.1"
numpy = "1.24.3"
opencv-python = "4.8.0.74"
onnx = "1.14.0"
insightface = "0.7.3"
psutil = "5.9.5"
tk = "0.1.0"
customtkinter = "5.2.0"
tkinterdnd2 = "0.3.0"
onnxruntime = "1.15.0"
tensorflow = "2.13.0"
opennsfw2 = "0.10.2"
protobuf = "4.23.4"
tqdm = "4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
